fixed menu alignment

--- a/src/common/components/Popover/Menu.scss
+++ b/src/common/components/Popover/Menu.scss
@@ -29,7 +29,7 @@
 	right: calc(100% + 13px);
 }
 .menu_qla37i.align-left {
-	left: 0;
+	left: -6px;
 }
 .menu_qla37i.align-center {
 	left: 50%;
@@ -40,7 +40,7 @@
 	animation: menu_qla37i-pop-out-align-center 250ms;
 }
 .menu_qla37i.align-right {
-	right: 0
+	right: -6px;
 }
 .menu_qla37i.align-top {
 	top: 0;
